tests/errors/first_stage/operation/invalid_addr_method/invalid_addr_method.am
dat: .data 1, 2
lea r1, dat[2]
